# binja_knife

./: .gitignore  README.md  pyproject.toml
bnk/: cli.py  cli_app.py  cli_ctx.py  cli_edit.py  cli_py.py  cli_request.py  cli_session.py  cli_tool.py  cli_view.py  client.py  config.py  endpoint.py  output.py  serverlib.py  tool_root.py
bnk_serverlib/: registry.py
bnk_serverlib/tools/: binary.py  bn_compat.py  edit_comments.py  edit_common.py  edit_db.py  edit_functions.py  edit_tags.py  edit_vars.py  edit_xrefs.py  functions.py  il.py  imports.py  sections.py  segments.py  strings.py  symbols.py  tags.py  util.py  xrefs.py
server/: __init__.py  plugin.json
server/plugin/: __init__.py  bn_compat.py  constants.py  controller.py  locks.py  log.py  root_state.py  service.py  sessions.py  views.py
tests/: __init__.py  test_output.py  test_registry.py  test_server_import.py
